# meta-feeder-paper

./: Cargo.toml  README.md
.github/workflows/: publish.yml
crates/meta-feeder-sdk/src/: config_page.html  enrich.rs  filename_meta.rs  hash.rs  lib.rs  plugin.rs  serve.rs
feeder-plugin/paper-feeder/: Cargo.toml  Dockerfile
feeder-plugin/paper-feeder/src/: arxiv.rs  lib.rs  main.rs  pubmed.rs  scihub.rs
